# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml
Pong/: .coveragerc  Pong.py  pyproject.toml  tasks.py
Pong/documentation/: architecture.md  changelog.md  requirements_specifcations.md  testing.md  timelog.md  user_guide.md
Pong/dokumentaatio/: Changelog.md  työaikakirjanpito.md
Pong/src/: Ball.py  Main.py  Rackets.py  config.py  database_connection.py  index.py  initialise_db.py  main.py  tasks.py
Pong/src/data/: scores.db
Pong/src/logic/: Pong.py  ball_logic.py  button_logic.py  pong.py  pong_logic.py  racket_logic.py  score.py  score_logic.py
Pong/src/repositories/: db_scores.py
Pong/src/running/: draw.py  game_loop.py  score.py
Pong/src/tests/: ball_test.py  button_test.py  game_loop_test.py  pong_test.py  racket_test.py  score_test.py
Pong/src/ui/: draw.py  menu_buttons.py
dokumentaatio/: työaikakirjanpito.md  vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: coverage_results
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
