[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ismail Tadji <ismail.tadji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.0.0"
coverage = "^7.2.3"
pytest = "^7.3.0"
pygame = "^2.3.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
