[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ismail Tadji <ismail.tadji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
invoke = "^2.0.0"
coverage = "^7.2.3"
pygame = "^2.3.0"
pylint = "^2.17.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
